aptina-beans-it/src/main/java/example/errors/WarningConstructorBeanState.java
package example.errors;

import org.seasar.aptina.beans.BeanState;

/**
 * 
 * @author koichik
 */
@BeanState
public class WarningConstructorBeanState {

    private WarningConstructorBeanState() {
    }

}
